--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "workbox-streams": "^6.5.4"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
